--- a/sesion02/recursos/doc01.html
+++ b/sesion02/recursos/doc01.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documento 01</title>
 
-    <script type="text/javascript" src="js/operaciones.js"></script>
+    <script type="text/javascript" src="js/operacionesPro.js"></script>
 
     </head>
 
@@ -14,9 +14,10 @@
     Ingrese el primer valor a sumar: <input type="number" id="txtValor1"><br>
     Ingrese el segundo valor a sumar: <input type="number" id="txtValor2"><br>
 
-    <button onclick="sumar(document.getElementById('txtValor1').value,
+    <button onclick="operar(document.getElementById('txtValor1').value,
                             document.getElementById('txtValor2').value,
-                            document.getElementById('txtResultado'))">Click para ver la suma</button>
+                            document.getElementById('txtResultado'),
+                            'sumar')">Click para ver la suma</button>
 
     <input type="text" id="txtResultado" readonly><br>
 
