--- a/sesion02/recursos/doc02.html
+++ b/sesion02/recursos/doc02.html
@@ -13,9 +13,9 @@
     <h1>Documento 02</h1>
     Ingrese el primer valor a sumar: <input type="text" id="txtValor1"><br>
     Ingrese el segundo valor a sumar: <input type="text" id="txtValor2"><br>
-
     <button onclick="sumar(document.getElementById('txtValor1').value,
-                            document.getElementById('txtValor2').value)">Click para ver la suma</button>
+                            document.getElementById('txtValor2').value,
+                            document.getElementById('txtResultado'))">Click para ver la suma</button><br>
 
 <input type="text" id="txtResultado" readonly><br>
 
