--- a/sesion04/recursos/propuesto.html
+++ b/sesion04/recursos/propuesto.html
@@ -16,7 +16,16 @@
             <h2>Ejercicios de arreglos</h2>
             <p></p>
             <input type="button" id="btnEjercicio1" value="Ejercicio 1" onclick="ejercicio01()">
-            
+            <input type="button" id="btnEjercicio2" value="Ejercicio 2" onclick="ejercicio02()">
+            <input type="button" id="btnEjercicio3" value="Ejercicio 3" onclick="ejercicio03()">
+            <input type="button" id="btnEjercicio4" value="Ejercicio 4" onclick="ejercicio04()">
+            <input type="button" id="btnEjercicio5" value="Ejercicio 5" onclick="ejercicio05()">
+            <input type="button" id="btnEjercicio6" value="Ejercicio 6" onclick="ejercicio06()">
+            <input type="button" id="btnEjercicio7" value="Ejercicio 7" onclick="ejercicio07()">
+            <input type="button" id="btnEjercicio8" value="Ejercicio 8" onclick="ejercicio08()">
+            <input type="button" id="btnEjercicio9" value="Ejercicio 9" onclick="ejercicio09()">
+            <input type="button" id="btnEjercicio10" value="Ejercicio 10" onclick="ejercicio10()">
+
         </section>
     </main>
     <footer>
