--- a/sesion05/recursos/index.html
+++ b/sesion05/recursos/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal Desarrollo Web</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <script src="script.js" defer></script>
+ 
     <!-- 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     -->
@@ -119,22 +119,7 @@
  <!--
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
    -->
-<script>
-    function agregarCurso() {
-        const cursosMatriculados = document.getElementById('cursosMatriculados');
-        const cursoSeleccionado = document.getElementById('cursos').value;
-        const estado = document.querySelector('input[name="tipoMatricula"]:checked').value;
-        
-        const nuevaFila = document.createElement('tr');
-        nuevaFila.innerHTML = `
-            <td>${cursoSeleccionado}</td>
-            <td>${estado}</td>
-            <td><button class="btn btn-danger btn-sm" onclick="eliminarCurso(this)">Eliminar</button></td>
-        `;
-        
-        cursosMatriculados.appendChild(nuevaFila);
-    }
-</script>
+<script src="js/myFunctions.js"></script>
 
 <script src="js/bootstrap.min.js"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
