--- a/sesion06/recursos/servicios.html
+++ b/sesion06/recursos/servicios.html
@@ -37,6 +37,9 @@
                 <a class="nav-link" href="escribenos.html">Escribenos</a>
               </li>
             </ul>
+            <button type="button" class="btn btn-primary">
+                Mensajes <span class="badge bg-danger">4</span>
+              </button>
             <form class="d-flex">
               <input class="form-control me-2" type="text" placeholder="Buscar">
               <button class="btn btn-primary" type="button">Buscar</button>
@@ -89,7 +92,7 @@
             <p>Chat en vivo: 
                 <a href="https://www.chat.com" target="_blank">Chat</a>
             </p>
-          
+            
         </div>
       </div>
 
