--- a/sesion06/recursos/index.html
+++ b/sesion06/recursos/index.html
@@ -37,6 +37,9 @@
                 <a class="nav-link" href="escribenos.html">Escribenos</a>
               </li>
             </ul>
+            <button type="button" class="btn btn-primary">
+              Mensajes <span class="badge bg-danger">4</span>
+            </button>
             <form class="d-flex">
               <input class="form-control me-2" type="text" placeholder="Buscar">
               <button class="btn btn-primary" type="button">Buscar</button>
