--- a/sesion06/recursos/servicios.html
+++ b/sesion06/recursos/servicios.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal Desarrollo Web</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/miestilo.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
     <div class="container-fluid p-5 bg-primary text-white text-align-left">
         <div class="row justify-content-center">
             <div class="col-sm-4" style="text-align: center;">
-              <img src="images/logo.jpg" alt="Logo" class="img-fluid rounded-circle" width="100" height="100">
+                <img src="images/logo.jpg" alt="Logo" 
+                class="img-fluid rounded-circle transition hover-zoom"  
+                width="100" height="100"
+                >
             </div>
             <div class="col-sm-4" style="text-align: left;">
               <h2>Bienvenido al site de la Veterinaria</h2>
@@ -38,8 +43,11 @@
               </li>
             </ul>
             <button type="button" class="btn btn-primary">
-                Mensajes <span class="badge bg-danger">4</span>
-              </button>
+                <i class="bi bi-envelope"></i> <span class="badge bg-danger">4</span>
+            </button>
+            <button type="button" class="btn btn-primary">
+                <i class="bi bi-hand-thumbs-up"></i> <span class="badge bg-danger">120</span>
+            </button>
             <form class="d-flex">
               <input class="form-control me-2" type="text" placeholder="Buscar">
               <button class="btn btn-primary" type="button">Buscar</button>
